# auto_subtitle

./: CLAUDE.md  LICENSE  MANIFEST.in  README.md  auto_subtitle.py  pyproject.toml  requirements.txt
src/simple_auto_subtitle/: __init__.py  main.py
